
[package]
name = "gamee"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
wgpu = "0.10.1"
pollster = "0.2"
log = "0.4"
env_logger = "0.9"
anyhow = "1.0.43"
bytemuck = { version = "1.7", features = [ "derive" ] }
image = "0.23.14"
